testsuite/bsc.typechecker/kind/StructDefParamGivenNonNumUsedNum.bs.bsc-out.expected
checking package dependencies
compiling StructDefParamGivenNonNumUsedNum.bs
Error: "StructDefParamGivenNonNumUsedNum.bs", line 4, column 15: (T0026)
  The value type `a' was found where a numeric type was expected.
