testsuite/bsc.typechecker/kind/StructDefParamGivenNonNumUsedNum.bs
package StructDefParamGivenNonNumUsedNum () where

struct (Foo :: * -> *) a =
    bar :: Bit a

